--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-GOOGLE_DRIVE_FOLDER_ID=
+# Google Drive folder ID to monitor
+# You can find this ID in your Google Drive URL when you open the folder
+# Example URL: https://drive.google.com/drive/folders/1AbCdEfGhIjKlMnOpQrStUvWxYz
+GOOGLE_DRIVE_FOLDER_ID=your_folder_id_here
